# BlueMagpie-TTS

./: .gitignore  LICENSE  MANIFEST.in  README.md  USAGE.md  pyproject.toml
docs/: 從_HuggingFace_使用模型.md
notebooks/: BlueMagpie_TTS_Colab.ipynb
scripts/: bench_rtf.py  extract_speaker_centroid.py
src/bluemagpie/: __init__.py  adapter.py  centroid.py  conditioning.py  config.py  loading.py  model.py  tslm.py
src/bluemagpie/_vendor/: __init__.py
src/bluemagpie/_vendor/voxcpm/: PROVENANCE.md  __init__.py
src/bluemagpie/_vendor/voxcpm/model/: __init__.py
src/bluemagpie/mlx/: DESIGN.md  __init__.py  audiovae_mlx.py  barbet_mlx.py  convert.py  dit_mlx.py  layers_mlx.py  locenc_mlx.py  minicpm_mlx.py  model_mlx.py
src/bluemagpie/serving/: DESIGN.md  __init__.py  _caps.py  accel.py  barbet_batch.py  cache.py  config.py  engine.py  minicpm_batch.py  runner.py  streaming.py
tests/: test_loading.py  test_mlx_parity.py  test_model_smoke.py  test_serving_parity.py  test_step_equivalence.py  tiny_models.py
